# jito-shredstream-pump-bot

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  env.buyfocus  env.example_wrapper_mirror  env_only.sh  run.sh
proto/: shredstream.proto
scripts/: run_bot.sh  run_proxy.sh
src/: alt_resolver.rs  blockhash_cache.rs  config.rs  jito.rs  keypair.rs  lib.rs  main.rs  pumpswap.rs  rpc_submit.rs  types.rs  wsol_bank.rs
src/dex/: mod.rs  pumpfun.rs
src/executor/: demo.rs  dispatcher.rs  mod.rs  pumpbuy.rs
src/monitor/: mod.rs  shredstream_proxy.rs
