[package]
name = "jito_shredstream_pump_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1.3"
bs58 = "0.5"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures = "0.3"
moka = { version = "0.12", features = ["future", "sync"] }
once_cell = "1"
prost = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.11", default-features = false, features = ["transport", "codegen", "prost"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Solana (match your existing stack)
solana-sdk = "1.18.26"
solana-client = "1.18.26"
solana-entry = "1.18.26"
solana-address-lookup-table-program = "1.18.26"

# Solana

solana-transaction-status = "1.18.26"


# Perf/cache
dashmap = "5.5"



[build-dependencies]
tonic-build = "0.11"

